<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="hint_1">Phone Number</string>
    <string name="label_1">Enter customer\'s 10 digits phone number to begin</string>
    <string name="submit_button">Submit</string>
    <string name="deluxe">Deluxe</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="current_orders">Current Orders</string>
    <string name="store_orders">Store Orders</string>
    <string name="pizza_pictures">pizzaPictures</string>

    <string name="pepperonis">Pepperoni</string>
    <string name="mushroom">Mushroom</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="pineapple">Pineapple</string>
    <string name="ham">Ham</string>
    <string name="olives">Olives</string>
    <string name="onion">Onion</string>
    <string name="black_olives">Black Olives</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="fresh_garlic">Fresh Garlic</string>

    <string name="add_orders">Add Order</string>
    <string name="add_order">addOrder</string>
    <string name="total">Total: $</string>
    <string name="delete_introduction">Swipe left to delete an order</string>
    <string name="place_order">Place Order</string>
    <string name="cancel_order">Cancel Order</string>

    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobno">Mobile No.</string>
    <string name="reg_no">Reg</string>

    <string-array name="size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>