<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/deluxe" android:id="@+id/deluxeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintVertical_bias="0.115" android:contentDescription="@string/deluxe"
            android:onClick="addDeluxe"/>
    <TextView
            android:text="@string/deluxe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintVertical_bias="0.276"/>
    <TextView
            android:text="@string/hawaiian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toTopOf="@+id/textView2"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/pepperoni" android:id="@+id/pepperoniButton"
            app:layout_constraintBottom_toBottomOf="@+id/deluxeButton"
            app:layout_constraintTop_toTopOf="@+id/deluxeButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/pepperoni"
            android:onClick="addPepperoni"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/hawaiian" android:id="@+id/hawaiianButton"
            app:layout_constraintBottom_toBottomOf="@+id/deluxeButton"
            app:layout_constraintTop_toTopOf="@+id/deluxeButton" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/hawaiian"
            app:layout_constraintHorizontal_bias="0.52" app:layout_constraintVertical_bias="0.0"
            android:onClick="addHawaiian"/>
    <TextView
            android:text="@string/pepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintVertical_bias="0.0"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.499" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.229"
            android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_1"
                android:id="@+id/phoneNumber" android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.928"
            android:text="@string/submit_button" android:onClick="submitNumber"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.412"
            app:layout_constraintHorizontal_bias="0.544" android:id="@+id/textView"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/currentorders" android:id="@+id/imageButton4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintVertical_bias="0.834" android:contentDescription="@string/current_orders"
            android:onClick="viewCurrentOrders"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/storeorders" android:id="@+id/imageButton5"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
            app:layout_constraintTop_toTopOf="@+id/imageButton4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.846"
            app:layout_constraintVertical_bias="0.834" android:contentDescription="@string/store_orders"
            android:onClick="viewStoreOrders"/>
    <TextView
            android:text="@string/current_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintVertical_bias="0.905"/>
    <TextView
            android:text="@string/store_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.786"
            app:layout_constraintVertical_bias="0.905"/>

</androidx.constraintlayout.widget.ConstraintLayout>