<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="409dp"
            android:layout_height="600dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/textBox"/>
    <TextView
            android:text="@string/delete_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.86"/>
    <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/totalPrice" android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/totalPrice" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.368" android:id="@+id/totalOrder"/>
    <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/totalPrice"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.108" app:layout_constraintVertical_bias="0.948"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="150dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.896"
            app:layout_constraintVertical_bias="0.975" android:onClick="placeOrder"/>


</androidx.constraintlayout.widget.ConstraintLayout>